--- a/MSR/MSR-6-Unix-Users.jrxml
+++ b/MSR/MSR-6-Unix-Users.jrxml
@@ -69,6 +69,7 @@
 			<property name="com.jaspersoft.studio.field.label" value="unit"/>
 			<property name="com.jaspersoft.studio.field.tree.path" value="unix_dba_users"/>
 		</field>
+		<sortField name="user_name"/>
 	</subDataset>
 	<subDataset name="UnixAddedUsers" uuid="5dcd9cd5-8f4e-480d-a3c6-4cb1053f75da">
 		<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
@@ -108,6 +109,7 @@
 			<property name="com.jaspersoft.studio.field.label" value="unit"/>
 			<property name="com.jaspersoft.studio.field.tree.path" value="unix_dba_users"/>
 		</field>
+		<sortField name="user_name"/>
 	</subDataset>
 	<subDataset name="UnixDeletedUsers" uuid="33baf5d7-0b14-499d-be10-78def979997c">
 		<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
@@ -147,6 +149,7 @@
 			<property name="com.jaspersoft.studio.field.label" value="unit"/>
 			<property name="com.jaspersoft.studio.field.tree.path" value="unix_dba_users"/>
 		</field>
+		<sortField name="user_name"/>
 	</subDataset>
 	<parameter name="chapter" class="java.lang.Integer">
 		<defaultValueExpression><![CDATA[1]]></defaultValueExpression>
@@ -323,7 +326,7 @@
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="17">
-							<textField>
+							<textField isStretchWithOverflow="true">
 								<reportElement style="Table-Detail-line" x="0" y="0" width="140" height="17" uuid="94797a5b-ed63-4ce4-a227-d749088c0ce7"/>
 								<textFieldExpression><![CDATA[$F{user_name}]]></textFieldExpression>
 							</textField>
@@ -339,7 +342,7 @@
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="17">
-							<textField>
+							<textField isStretchWithOverflow="true">
 								<reportElement style="Table-Detail-line" x="0" y="0" width="100" height="17" uuid="f02aee32-612f-4f53-868b-8e3cd08b2417"/>
 								<textFieldExpression><![CDATA[$F{user_id}]]></textFieldExpression>
 							</textField>
@@ -355,7 +358,7 @@
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="17">
-							<textField>
+							<textField isStretchWithOverflow="true">
 								<reportElement style="Table-Detail-line" x="0" y="0" width="213" height="17" uuid="d604c6db-80b7-4c1b-860f-f0a8c7dab5fc"/>
 								<textFieldExpression><![CDATA[$F{unit}]]></textFieldExpression>
 							</textField>
@@ -437,7 +440,7 @@
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="17">
-							<textField>
+							<textField isStretchWithOverflow="true">
 								<reportElement style="Table-Detail-line" x="0" y="0" width="140" height="17" uuid="7f87dc2f-d959-4ee1-96ba-e71118e995bd"/>
 								<textFieldExpression><![CDATA[$F{user_name}]]></textFieldExpression>
 							</textField>
@@ -453,7 +456,7 @@
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="17">
-							<textField>
+							<textField isStretchWithOverflow="true">
 								<reportElement style="Table-Detail-line" x="0" y="0" width="100" height="17" uuid="16d563dc-fe11-483d-8555-ab7725df99b0"/>
 								<textFieldExpression><![CDATA[$F{user_id}]]></textFieldExpression>
 							</textField>
@@ -469,7 +472,7 @@
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="17">
-							<textField>
+							<textField isStretchWithOverflow="true">
 								<reportElement style="Table-Detail-line" x="0" y="0" width="213" height="17" uuid="46ec6657-83bc-4d69-922a-63cba2b23abf"/>
 								<textFieldExpression><![CDATA[$F{unit}]]></textFieldExpression>
 							</textField>
@@ -551,7 +554,7 @@
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="17">
-							<textField>
+							<textField isStretchWithOverflow="true">
 								<reportElement style="Table-Detail-line" x="0" y="0" width="140" height="17" uuid="049fb81b-fc62-474a-9254-851098e9b091"/>
 								<textFieldExpression><![CDATA[$F{user_name}]]></textFieldExpression>
 							</textField>
@@ -567,7 +570,7 @@
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="17">
-							<textField>
+							<textField isStretchWithOverflow="true">
 								<reportElement style="Table-Detail-line" x="0" y="0" width="100" height="17" uuid="3af539d6-2348-439c-a621-fb64c6e83138"/>
 								<textFieldExpression><![CDATA[$F{user_id}]]></textFieldExpression>
 							</textField>
@@ -583,7 +586,7 @@
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="17">
-							<textField>
+							<textField isStretchWithOverflow="true">
 								<reportElement style="Table-Detail-line" x="0" y="0" width="213" height="17" uuid="9e170d90-1a5c-4ee2-ac92-9b5c0723431f"/>
 								<textFieldExpression><![CDATA[$F{unit}]]></textFieldExpression>
 							</textField>
