--- a/MSR/MSR-6.2-DBA-Users.jrxml
+++ b/MSR/MSR-6.2-DBA-Users.jrxml
@@ -69,6 +69,7 @@
 			<property name="com.jaspersoft.studio.field.label" value="unit"/>
 			<property name="com.jaspersoft.studio.field.tree.path" value="unix_dba_users"/>
 		</field>
+		<sortField name="user_name"/>
 	</subDataset>
 	<subDataset name="DbaAddedUsers" uuid="5dcd9cd5-8f4e-480d-a3c6-4cb1053f75da">
 		<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
@@ -108,6 +109,7 @@
 			<property name="com.jaspersoft.studio.field.label" value="unit"/>
 			<property name="com.jaspersoft.studio.field.tree.path" value="unix_dba_users"/>
 		</field>
+		<sortField name="user_name"/>
 	</subDataset>
 	<subDataset name="DbaDeletedUsers" uuid="33baf5d7-0b14-499d-be10-78def979997c">
 		<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
@@ -147,6 +149,7 @@
 			<property name="com.jaspersoft.studio.field.label" value="unit"/>
 			<property name="com.jaspersoft.studio.field.tree.path" value="unix_dba_users"/>
 		</field>
+		<sortField name="user_name"/>
 	</subDataset>
 	<parameter name="chapter" class="java.lang.Integer">
 		<defaultValueExpression><![CDATA[1]]></defaultValueExpression>
@@ -284,7 +287,7 @@
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="17">
 							<property name="com.jaspersoft.studio.unit.height" value="px"/>
-							<textField>
+							<textField isStretchWithOverflow="true">
 								<reportElement style="Table-Detail-line" x="0" y="0" width="30" height="17" uuid="7f9300e3-01ae-48a2-9bda-57d1f3277726">
 									<property name="com.jaspersoft.studio.unit.rightIndent" value="px"/>
 								</reportElement>
@@ -305,7 +308,7 @@
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="17">
-							<textField>
+							<textField isStretchWithOverflow="true">
 								<reportElement style="Table-Detail-line" x="0" y="0" width="140" height="17" uuid="63084106-5c23-4a85-88b4-5433fd58cfae"/>
 								<textFieldExpression><![CDATA[$F{user_name}]]></textFieldExpression>
 							</textField>
@@ -321,7 +324,7 @@
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="17">
-							<textField>
+							<textField isStretchWithOverflow="true">
 								<reportElement style="Table-Detail-line" x="0" y="0" width="100" height="17" uuid="22a210cb-c543-432a-a2d5-6f24181d2e08"/>
 								<textFieldExpression><![CDATA[$F{user_id}]]></textFieldExpression>
 							</textField>
@@ -337,7 +340,7 @@
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="17">
-							<textField>
+							<textField isStretchWithOverflow="true">
 								<reportElement style="Table-Detail-line" x="0" y="0" width="213" height="17" uuid="6bf2e69f-aa9d-460f-95a3-9a584e32d97c"/>
 								<textFieldExpression><![CDATA[$F{unit}]]></textFieldExpression>
 							</textField>
@@ -398,7 +401,7 @@
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="17">
 							<property name="com.jaspersoft.studio.unit.height" value="px"/>
-							<textField>
+							<textField isStretchWithOverflow="true">
 								<reportElement style="Table-Detail-line" x="0" y="0" width="30" height="17" uuid="020878c1-5ab6-4156-8f48-5659868c8841">
 									<property name="com.jaspersoft.studio.unit.rightIndent" value="px"/>
 								</reportElement>
@@ -419,7 +422,7 @@
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="17">
-							<textField>
+							<textField isStretchWithOverflow="true">
 								<reportElement style="Table-Detail-line" x="0" y="0" width="140" height="17" uuid="184b2715-4ea7-45a9-b727-18382d5051a4"/>
 								<textFieldExpression><![CDATA[$F{user_name}]]></textFieldExpression>
 							</textField>
@@ -435,7 +438,7 @@
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="17">
-							<textField>
+							<textField isStretchWithOverflow="true">
 								<reportElement style="Table-Detail-line" x="0" y="0" width="100" height="17" uuid="dc0f07ee-e289-4ba4-96d9-56ef6be80765"/>
 								<textFieldExpression><![CDATA[$F{user_id}]]></textFieldExpression>
 							</textField>
@@ -451,7 +454,7 @@
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="17">
-							<textField>
+							<textField isStretchWithOverflow="true">
 								<reportElement style="Table-Detail-line" x="0" y="0" width="213" height="17" uuid="0cf4239b-4a10-42c6-a274-dcb2eba27dd6"/>
 								<textFieldExpression><![CDATA[$F{unit}]]></textFieldExpression>
 							</textField>
@@ -511,7 +514,7 @@
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="17">
-							<textField>
+							<textField isStretchWithOverflow="true">
 								<reportElement style="Table-Detail-line" x="0" y="0" width="30" height="17" uuid="ed4ab6d0-2d08-46df-8b1f-fffacaf77337">
 									<property name="com.jaspersoft.studio.unit.rightIndent" value="px"/>
 								</reportElement>
@@ -532,7 +535,7 @@
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="17">
-							<textField>
+							<textField isStretchWithOverflow="true">
 								<reportElement style="Table-Detail-line" x="0" y="0" width="140" height="17" uuid="89bc4db9-e8b7-412e-8703-a8c4f9e6d9a2"/>
 								<textFieldExpression><![CDATA[$F{user_name}]]></textFieldExpression>
 							</textField>
@@ -548,7 +551,7 @@
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="17">
-							<textField>
+							<textField isStretchWithOverflow="true">
 								<reportElement style="Table-Detail-line" x="0" y="0" width="100" height="17" uuid="f383b728-26cd-403e-9375-b7ad7a1d1d01"/>
 								<textFieldExpression><![CDATA[$F{user_id}]]></textFieldExpression>
 							</textField>
@@ -564,7 +567,7 @@
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="17">
-							<textField>
+							<textField isStretchWithOverflow="true">
 								<reportElement style="Table-Detail-line" x="0" y="0" width="213" height="17" uuid="74aa7c09-3302-47ce-82af-5a83496a38b5"/>
 								<textFieldExpression><![CDATA[$F{unit}]]></textFieldExpression>
 							</textField>
