--- a/MSR/Monthly-Security-Report-Book.jrxml
+++ b/MSR/Monthly-Security-Report-Book.jrxml
@@ -193,6 +193,7 @@ where company_tag =  $P{customer}]]>
 			</p:subreportPart>
 		</part>
 		<part uuid="c6862408-3f02-4ecd-9e84-a9c7e588b910">
+			<printWhenExpression><![CDATA[$F{nb_win_users} > 0]]></printWhenExpression>
 			<p:subreportPart xmlns:p="http://jasperreports.sourceforge.net/jasperreports/parts" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/parts http://jasperreports.sourceforge.net/xsd/parts.xsd">
 				<subreportParameter name="REPORT_CONNECTION">
 					<subreportParameterExpression><![CDATA[$P{REPORT_CONNECTION}]]></subreportParameterExpression>
@@ -216,6 +217,35 @@ where company_tag =  $P{customer}]]>
 					<subreportParameterExpression><![CDATA[$V{subsection}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportExpression><![CDATA["MSR-2.2-Graph-Windows-Users.jasper"]]></subreportExpression>
+			</p:subreportPart>
+		</part>
+		<part uuid="6132dcfd-1c3e-4272-8131-ef3d2f3ccb55">
+			<p:subreportPart xmlns:p="http://jasperreports.sourceforge.net/jasperreports/parts" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/parts http://jasperreports.sourceforge.net/xsd/parts.xsd">
+				<subreportParameter name="REPORT_CONNECTION">
+					<subreportParameterExpression><![CDATA[$P{REPORT_CONNECTION}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="chapter">
+					<subreportParameterExpression><![CDATA[$V{chapter} + 1]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="subsection">
+					<subreportParameterExpression><![CDATA[$V{subsection}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="section">
+					<subreportParameterExpression><![CDATA[$V{section}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="customer">
+					<subreportParameterExpression><![CDATA[$P{customer}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="coverTitle">
+					<subreportParameterExpression><![CDATA[$P{coverTitle}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="selectedDate">
+					<subreportParameterExpression><![CDATA[$V{selectedDate}]]></subreportParameterExpression>
+				</subreportParameter>
+				<returnValue subreportVariable="newChapter" toVariable="chapter"/>
+				<returnValue subreportVariable="newSection" toVariable="section"/>
+				<returnValue subreportVariable="newSubsection" toVariable="subsection"/>
+				<subreportExpression><![CDATA["MSR-8-Security-Incidents.jasper"]]></subreportExpression>
 			</p:subreportPart>
 		</part>
 		<part uuid="5cae9004-c5e1-477c-8da3-a44003486775">
@@ -402,7 +432,7 @@ where company_tag =  $P{customer}]]>
 					<subreportParameterExpression><![CDATA[$P{REPORT_CONNECTION}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="chapter">
-					<subreportParameterExpression><![CDATA[$V{chapter} + 1]]></subreportParameterExpression>
+					<subreportParameterExpression><![CDATA[$V{chapter}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="covertTitle">
 					<subreportParameterExpression><![CDATA[$P{coverTitle}]]></subreportParameterExpression>
@@ -411,7 +441,7 @@ where company_tag =  $P{customer}]]>
 					<subreportParameterExpression><![CDATA[$F{customer}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="section">
-					<subreportParameterExpression><![CDATA[0]]></subreportParameterExpression>
+					<subreportParameterExpression><![CDATA[$V{section}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="selectedDate">
 					<subreportParameterExpression><![CDATA[$V{selectedDate}]]></subreportParameterExpression>
