--- a/MSR/MSR-9-Qualys.jrxml
+++ b/MSR/MSR-9-Qualys.jrxml
@@ -102,7 +102,7 @@
 where lower(customer) = lower( $P{customer} )
 and export_date = to_date( $P{selectedDate} , 'YYYYMMDD') 
 and (severity_1 > 0 or severity_2 > 0 or severity_3 > 0 or severity_4 > 0 or severity_5 > 0)
-and lower(host) =  $P{hostname} ]]>
+and lower(host) = lower($P{hostname} )]]>
 		</queryString>
 		<field name="host" class="java.lang.String">
 			<property name="com.jaspersoft.studio.field.label" value="host"/>
@@ -310,7 +310,7 @@ and export_date = to_date('20190901', 'YYYYMMDD')]]>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="418" splitType="Stretch">
+		<band height="495" splitType="Stretch">
 			<property name="com.jaspersoft.studio.layout"/>
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
@@ -537,61 +537,70 @@ and export_date = to_date('20190901', 'YYYYMMDD')]]>
 				</textElement>
 				<textFieldExpression><![CDATA["First found datetime" + "\t" + $F{first_found_datetime}]]></textFieldExpression>
 			</textField>
-		</band>
-		<band height="88">
 			<componentElement>
-				<reportElement x="0" y="20" width="392" height="50" uuid="485b949d-745b-4405-ab89-d43efcce495c">
+				<reportElement positionType="Float" x="0" y="444" width="483" height="40" uuid="485b949d-745b-4405-ab89-d43efcce495c">
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
 					<property name="com.jaspersoft.studio.table.style.table_header" value="Table 2_TH"/>
 					<property name="com.jaspersoft.studio.table.style.column_header" value="Table 2_CH"/>
 					<property name="com.jaspersoft.studio.table.style.detail" value="Table 2_TD"/>
 				</reportElement>
-				<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
-					<datasetRun subDataset="Summary" uuid="8d6a393c-0bd3-4df3-bc66-070ea01c5a83">
+				<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" whenNoDataType="AllSectionsNoDetail">
+					<datasetRun subDataset="Summary" uuid="20617928-6c58-4f94-ab67-9f99fd30bdef">
+						<datasetParameter name="customer">
+							<datasetParameterExpression><![CDATA[$F{customer}]]></datasetParameterExpression>
+						</datasetParameter>
+						<datasetParameter name="hostname">
+							<datasetParameterExpression><![CDATA[$F{host}]]></datasetParameterExpression>
+						</datasetParameter>
+						<datasetParameter name="selectedDate">
+							<datasetParameterExpression><![CDATA[DATEFORMAT($F{export_date},"YYYYMMdd")]]></datasetParameterExpression>
+						</datasetParameter>
 						<connectionExpression><![CDATA[$P{REPORT_CONNECTION} ]]></connectionExpression>
 					</datasetRun>
-					<jr:column width="40" uuid="17e623e8-568b-459e-af76-39229bb4483f">
+					<jr:column width="30" uuid="17e623e8-568b-459e-af76-39229bb4483f">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column1"/>
 						<jr:columnHeader style="Table 2_CH" height="20" rowSpan="1">
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="40" height="20" uuid="5c3ca334-baf0-4e1f-8052-6b258a7d58ba"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="30" height="20" uuid="5c3ca334-baf0-4e1f-8052-6b258a7d58ba"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle"/>
 								<text><![CDATA[#]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table 2_TD" height="30">
+						<jr:detailCell style="Table 2_TD" height="20">
+							<property name="com.jaspersoft.studio.unit.width" value="pixel"/>
+							<property name="com.jaspersoft.studio.unit.height" value="px"/>
 							<textField>
-								<reportElement x="0" y="0" width="40" height="30" uuid="19ca6df0-2935-4a11-909d-30025ee46b9c"/>
+								<reportElement x="0" y="0" width="30" height="20" uuid="19ca6df0-2935-4a11-909d-30025ee46b9c"/>
 								<textFieldExpression><![CDATA[$F{rownum}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="120" uuid="20d83587-928f-43b4-9d90-e8df8f821e88">
+					<jr:column width="190" uuid="20d83587-928f-43b4-9d90-e8df8f821e88">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column2"/>
 						<jr:columnHeader style="Table 2_CH" height="20" rowSpan="1">
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="120" height="20" uuid="c8d027c8-7119-4c62-bfb0-962f6a136a50"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="190" height="20" uuid="c8d027c8-7119-4c62-bfb0-962f6a136a50"/>
 								<text><![CDATA[host]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table 2_TD" height="30">
+						<jr:detailCell style="Table 2_TD" height="20">
 							<textField>
-								<reportElement x="0" y="0" width="120" height="30" uuid="bddb0bf3-9f30-4807-a070-df2fd158c715"/>
+								<reportElement x="0" y="0" width="190" height="20" uuid="bddb0bf3-9f30-4807-a070-df2fd158c715"/>
 								<textFieldExpression><![CDATA[$F{host}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="130" uuid="4cfb231f-bd03-4c4d-ac7e-cbdf2b8af083">
+					<jr:column width="120" uuid="4cfb231f-bd03-4c4d-ac7e-cbdf2b8af083">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column3"/>
 						<jr:columnHeader style="Table 2_CH" height="20" rowSpan="1">
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="130" height="20" uuid="0d724221-4738-45ad-bf07-5549e8405571"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="120" height="20" uuid="0d724221-4738-45ad-bf07-5549e8405571"/>
 								<text><![CDATA[ip]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table 2_TD" height="30">
+						<jr:detailCell style="Table 2_TD" height="20">
 							<textField>
-								<reportElement x="0" y="0" width="130" height="30" uuid="242756f4-76cd-490e-bf3a-19de23a1bd38"/>
+								<reportElement x="0" y="0" width="120" height="20" uuid="242756f4-76cd-490e-bf3a-19de23a1bd38"/>
 								<textFieldExpression><![CDATA[$F{ip}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
@@ -604,9 +613,9 @@ and export_date = to_date('20190901', 'YYYYMMDD')]]>
 								<text><![CDATA[sev 1]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table 2_TD" height="30">
+						<jr:detailCell style="Table 2_TD" height="20">
 							<textField>
-								<reportElement x="0" y="0" width="30" height="30" uuid="7d2e8747-ddfa-4cf0-bd4c-64c24ffd0af6"/>
+								<reportElement x="0" y="0" width="30" height="20" uuid="7d2e8747-ddfa-4cf0-bd4c-64c24ffd0af6"/>
 								<textFieldExpression><![CDATA[$F{severity_1}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
@@ -619,9 +628,9 @@ and export_date = to_date('20190901', 'YYYYMMDD')]]>
 								<text><![CDATA[sev 2]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table 2_TD" height="30">
+						<jr:detailCell style="Table 2_TD" height="20">
 							<textField>
-								<reportElement x="0" y="0" width="28" height="30" uuid="084a3a70-c9e7-4e89-9417-db3ad596d223"/>
+								<reportElement x="0" y="0" width="28" height="20" uuid="084a3a70-c9e7-4e89-9417-db3ad596d223"/>
 								<textFieldExpression><![CDATA[$F{severity_2}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
@@ -634,9 +643,9 @@ and export_date = to_date('20190901', 'YYYYMMDD')]]>
 								<text><![CDATA[sev 3]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table 2_TD" height="30">
+						<jr:detailCell style="Table 2_TD" height="20">
 							<textField>
-								<reportElement x="0" y="0" width="28" height="30" uuid="c7901140-0c80-4eaf-8581-be961e14c3f2"/>
+								<reportElement x="0" y="0" width="28" height="20" uuid="c7901140-0c80-4eaf-8581-be961e14c3f2"/>
 								<textFieldExpression><![CDATA[$F{severity_3}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
@@ -649,9 +658,9 @@ and export_date = to_date('20190901', 'YYYYMMDD')]]>
 								<text><![CDATA[sev 4]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table 2_TD" height="30">
+						<jr:detailCell style="Table 2_TD" height="20">
 							<textField>
-								<reportElement x="0" y="0" width="28" height="30" uuid="e242039c-6616-408c-98c6-b2223c4561db"/>
+								<reportElement x="0" y="0" width="28" height="20" uuid="e242039c-6616-408c-98c6-b2223c4561db"/>
 								<textFieldExpression><![CDATA[$F{severity_4}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
@@ -664,9 +673,9 @@ and export_date = to_date('20190901', 'YYYYMMDD')]]>
 								<text><![CDATA[sev 5]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:detailCell style="Table 2_TD" height="30">
+						<jr:detailCell style="Table 2_TD" height="20">
 							<textField>
-								<reportElement x="0" y="0" width="28" height="30" uuid="e96a0f58-9657-4d46-adb2-3ea888e0141b"/>
+								<reportElement x="0" y="0" width="28" height="20" uuid="e96a0f58-9657-4d46-adb2-3ea888e0141b"/>
 								<textFieldExpression><![CDATA[$F{severity_5}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
@@ -674,7 +683,7 @@ and export_date = to_date('20190901', 'YYYYMMDD')]]>
 				</jr:table>
 			</componentElement>
 			<textField hyperlinkType="LocalAnchor" bookmarkLevel="1">
-				<reportElement style="Header-2" positionType="Float" x="0" y="0" width="483" height="20" uuid="e32d3dac-2081-43ca-8437-9d4a0e01a8fe"/>
+				<reportElement style="Header-2" positionType="Float" x="0" y="424" width="483" height="20" uuid="e32d3dac-2081-43ca-8437-9d4a0e01a8fe"/>
 				<textFieldExpression><![CDATA[$V{x.Summary}]]></textFieldExpression>
 				<anchorNameExpression><![CDATA[$V{x.Vulnerabilities}]]></anchorNameExpression>
 				<hyperlinkAnchorExpression><![CDATA[$V{x.Vulnerabilities}]]></hyperlinkAnchorExpression>
