--- a/MSR/MSR-8-Security-Incidents.jrxml
+++ b/MSR/MSR-8-Security-Incidents.jrxml
@@ -172,7 +172,7 @@ and export_date=to_date( $P{selectedDate} , 'YYYYMMDD')]]>
 		</band>
 	</pageHeader>
 	<detail>
-		<band height="45" splitType="Stretch">
+		<band height="98" splitType="Stretch">
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<textField bookmarkLevel="1">
 				<reportElement style="Header-2" positionType="Float" x="0" y="0" width="483" height="23" uuid="b3c0ef28-32e6-408b-bfb6-440082728012"/>
@@ -189,12 +189,8 @@ and export_date=to_date( $P{selectedDate} , 'YYYYMMDD')]]>
 				</textElement>
 				<text><![CDATA[The following table shows the Security incidents]]></text>
 			</staticText>
-		</band>
-		<band height="50" splitType="Prevent">
-			<property name="com.jaspersoft.studio.unit.height" value="px"/>
-			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 			<componentElement>
-				<reportElement stretchType="ContainerHeight" x="0" y="0" width="730" height="50" isRemoveLineWhenBlank="true" uuid="348d2ed5-64d9-4f33-8ee6-54c1d90a17d8">
+				<reportElement positionType="Float" stretchType="ContainerHeight" x="0" y="43" width="730" height="50" isRemoveLineWhenBlank="true" uuid="348d2ed5-64d9-4f33-8ee6-54c1d90a17d8">
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
 					<property name="com.jaspersoft.studio.table.style.table_header" value="Table_TH"/>
 					<property name="com.jaspersoft.studio.table.style.column_header" value="Table_CH"/>
@@ -231,7 +227,7 @@ and export_date=to_date( $P{selectedDate} , 'YYYYMMDD')]]>
 									<property name="com.jaspersoft.studio.unit.spacingBefore" value="px"/>
 								</reportElement>
 								<textElement verticalAlignment="Top">
-									<font size="5"/>
+									<font size="6"/>
 									<paragraph spacingBefore="2"/>
 								</textElement>
 								<textFieldExpression><![CDATA[$F{ticket_number}]]></textFieldExpression>
@@ -254,7 +250,7 @@ and export_date=to_date( $P{selectedDate} , 'YYYYMMDD')]]>
 									<property name="com.jaspersoft.studio.unit.spacingBefore" value="px"/>
 								</reportElement>
 								<textElement textAlignment="Center" verticalAlignment="Top">
-									<font size="5"/>
+									<font size="6"/>
 									<paragraph spacingBefore="2"/>
 								</textElement>
 								<textFieldExpression><![CDATA[IF(DATEFORMAT($F{open_date},"yyyy/mm/dd")==null, "", DATEFORMAT($F{open_date},"yyyy/mm/dd"))]]></textFieldExpression>
@@ -277,7 +273,7 @@ and export_date=to_date( $P{selectedDate} , 'YYYYMMDD')]]>
 									<property name="com.jaspersoft.studio.unit.spacingBefore" value="px"/>
 								</reportElement>
 								<textElement textAlignment="Center" verticalAlignment="Top">
-									<font size="5"/>
+									<font size="6"/>
 									<paragraph spacingBefore="2"/>
 								</textElement>
 								<textFieldExpression><![CDATA[IF(DATEFORMAT($F{closed_date},"yyyy/mm/dd")==null, "", DATEFORMAT($F{closed_date},"yyyy/mm/dd"))]]></textFieldExpression>
@@ -300,7 +296,7 @@ and export_date=to_date( $P{selectedDate} , 'YYYYMMDD')]]>
 									<property name="com.jaspersoft.studio.unit.spacingBefore" value="px"/>
 								</reportElement>
 								<textElement verticalAlignment="Top">
-									<font size="5"/>
+									<font size="6"/>
 									<paragraph spacingBefore="2"/>
 								</textElement>
 								<textFieldExpression><![CDATA[$F{description}]]></textFieldExpression>
@@ -324,7 +320,7 @@ and export_date=to_date( $P{selectedDate} , 'YYYYMMDD')]]>
 									<property name="com.jaspersoft.studio.unit.spacingBefore" value="px"/>
 								</reportElement>
 								<textElement verticalAlignment="Top">
-									<font size="5"/>
+									<font size="6"/>
 									<paragraph spacingBefore="2"/>
 								</textElement>
 								<textFieldExpression><![CDATA[$F{status}]]></textFieldExpression>
@@ -349,7 +345,7 @@ and export_date=to_date( $P{selectedDate} , 'YYYYMMDD')]]>
 								</reportElement>
 								<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0"/>
 								<textElement verticalAlignment="Top">
-									<font size="5"/>
+									<font size="6"/>
 									<paragraph firstLineIndent="0" leftIndent="2" spacingBefore="2">
 										<tabStop position="20" alignment="Left"/>
 									</paragraph>
@@ -377,7 +373,7 @@ and export_date=to_date( $P{selectedDate} , 'YYYYMMDD')]]>
 								</reportElement>
 								<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0"/>
 								<textElement verticalAlignment="Top">
-									<font size="5"/>
+									<font size="6"/>
 									<paragraph firstLineIndent="0" leftIndent="2" spacingBefore="2"/>
 								</textElement>
 								<textFieldExpression><![CDATA[$F{long_term_solution}]]></textFieldExpression>
@@ -401,7 +397,7 @@ and export_date=to_date( $P{selectedDate} , 'YYYYMMDD')]]>
 									<property name="com.jaspersoft.studio.unit.spacingBefore" value="px"/>
 								</reportElement>
 								<textElement textAlignment="Center" verticalAlignment="Top">
-									<font size="5"/>
+									<font size="6"/>
 									<paragraph spacingBefore="2"/>
 								</textElement>
 								<textFieldExpression><![CDATA[$F{severity}]]></textFieldExpression>
@@ -410,6 +406,10 @@ and export_date=to_date( $P{selectedDate} , 'YYYYMMDD')]]>
 					</jr:column>
 				</jr:table>
 			</componentElement>
+		</band>
+		<band height="15" splitType="Prevent">
+			<property name="com.jaspersoft.studio.unit.height" value="px"/>
+			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 		</band>
 		<band height="20">
 			<staticText>
